# AsitenteComercial

./: .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  DATOS_DASHBOARD.md  PRESENTACION_CLIENTE.md  PRESENTATION_CLIENT_EN.md  Presentacion-Asistente.pptx  README.md  agente.html  dashboard-v5-mi-dia.html  docker-compose.prod.yml  generar_pptx.py  index.html  inicio.html  login.html
backend/: .dockerignore  .env.example  .env.prod.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: agente.py  auth.py  briefing.py  command.py  dashboard.py  gestion.py  health.py  log.py  reuniones.py  webhook.py
backend/app/core/: auth.py  config.py  timewindow.py
backend/migrations/: 0001_init.sql  0002_queue.sql  0003_rls.sql  0004_event_catalog.sql  0005_daily_views.sql  0006_gestion_core.sql  0007_executive.sql  0008_auth_and_tenant.sql  0009_executive_i18n.sql  0010_seed_i18n.sql  0011_agentes_geo.sql  0012_command_center.sql  0013_capacitacion_ruta.sql  0014_capacitacion_zoom.sql  0015_acciones.sql  0016_multilider.sql  0017_reuniones.sql  0018_clientes.sql  0019_briefing.sql  0020_lider_onboarding.sql  0021_rules_engine.sql  0022_knowledge_base.sql  0023_acciones_log_audit.sql  0024_difusion.sql  0025_simulaciones.sql  0026_onboarding_contenido.sql  0027_agente_auth.sql  0028_activity_log.sql  README.md
backend/tests/: conftest.py  test_auth.py  test_capture.py  test_command.py  test_idempotency.py  test_knowledge_base.py  test_onboarding_simulador.py  test_pool.py  test_processing.py  test_rules_engine.py  test_waha_noweb.py
docs/: Overview.md  (+19 more)
(+124 files in other folders)
